--- a/package.json
+++ b/package.json
@@ -7,13 +7,26 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.20",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.30",
+    "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/redux-logger": "^3.0.8",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
+    "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.0.1"
   },
