--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-logger": "^3.0.8",
+    "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "node-sass": "^5.0.0",
